tests/inc_dec/valid/increment_pre_return.amu
main :: () -> s32 {
  a:s32 = 5;
  return ++a;
}