tests/inc_dec/invalid/literal_dec_pre.amu
main() : s32{
  --2;
  return 0;
}